--- a/100-math-description/GR-sslcm-math-description.Rmd
+++ b/100-math-description/GR-sslcm-math-description.Rmd
@@ -484,9 +484,9 @@ Hatchery smolt tag group:
 
 for hatchery-origin smolt releases ($j \in [\CAT, \LOS, \UGR]$).
 
-Much research has been devoted to studying the survival of Chinook salmon smolts migrating through the hydrosystem on the Snake and Columbia rivers. 
-In particular, the Comparative Survival Study has tracked the survival of a variety of tagging groups going back to the early 2000s; estimates from a recent report [@mccann-etal-2020, Table A.1 on page A-20 therein] were used to serve as empirical observations (with estimates of uncertainty) with which to inform this component of our model.
-Provided by @mccann-etal-2020 are annual estimates of in-stream survival along the migration from LGR through Bonneville Dam (BON); separate time series are available for natural-origin (we used the "Aggregate Wild Chinook" estimates as none were available for Grande Ronde populations only, denoted $\hat{\phi}^{M^{a} \to O^{0}}_{y,o=\NOR}$ here) and for hatchery-origin (we used the "Catherine Creek AP" estimates, denoted $\hat{\phi}^{M^{a} \to O^{0}}_{y,o=\HOR}$ here).
+Much research has been devoted to studying the survival of Chinook salmon smolt migrating through the hydrosystem on the Snake and Columbia rivers. 
+In particular, the Comparative Survival Study has tracked the survival of a variety of tagging groups going back to the early 2000s; estimates from a recent report [@mccann-etal-2022, Table A.1] were used to serve as empirical observations (with estimates of uncertainty) with which to inform this component of our model.
+Provided by @mccann-etal-2022 are annual estimates of in-stream survival along the migration from LGR through Bonneville Dam (BON); separate time series are available for natural-origin (we used the "Aggregate Wild Chinook" estimates as none were available for Grande Ronde populations only, denoted $\hat{\phi}^{M^{a} \to O^{0}}_{y,o=\NOR}$ here) and for hatchery-origin (we used the "Catherine Creek AP" estimates, denoted $\hat{\phi}^{M^{a} \to O^{0}}_{y,o=\HOR}$ here).
 These estimates were treated as representative of the survival for each population, which implies an assumption that the different populations experienced similar conditions during this migration and attributes all variability to either random process or observation noise (i.e., no factors known to influence hydrosystem survival such as size, flood pulses, barging intensity were included).
 Similar to the other survival data sets, these estimates were assumed to have been made with logit-normal random error around the process model values to build the likelihood:
 
